<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.login.Login">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/et_background"
        android:hint="@string/email_hint"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/et_background"
        android:hint="@string/password"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="#455a64"
        android:text="@string/btn_login_text"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forget_pass_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/login_use_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="او سجل عن طريق "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password" />

    <View
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/login_use_txt"
        app:layout_constraintEnd_toStartOf="@id/login_use_txt"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        app:layout_constraintTop_toTopOf="@id/login_use_txt" />

    <View
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/login_use_txt"
        app:layout_constraintStart_toEndOf="@id/login_use_txt"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        app:layout_constraintTop_toTopOf="@id/login_use_txt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="#304ffe"
        android:text="@string/login_facebook"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/login_use_txt"
        app:icon="@drawable/facebook_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_10sdp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="#d32f2f"
        android:text="@string/login_google"
        app:icon="@drawable/google_icon"
        app:iconSize="@dimen/_15sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook" />

    <TextView
        android:id="@+id/no_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/have_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google"

        />



</androidx.constraintlayout.widget.ConstraintLayout>